[package]
name = "sendfile"
version = "0.3.0"
exclude = ["examples/*", ".travis.yml", ".gitignore"]
description = "A platform sendfile wrapper for Rust."
repository = "https://github.com/xen0n/sendfile.rs"
readme = "README.md"
keywords = ["sendfile", "wrapper", "linux"]
license = "Apache-2.0/MIT"
authors = ["Wang Xuerui <idontknw.wang@gmail.com>"]

[dependencies]
syscall = "0.2.1"
